--- a/login.css
+++ b/login.css
@@ -4,6 +4,7 @@
 }
 body{
     display: flex;
+    flex-direction: column;
     font-family: Arial, sans-serif;
     /* background-color: #fafafa; */
     /* justify-content: center;
@@ -194,4 +195,73 @@ body{
         text-decoration: none;
         font-weight:400;
         font-size: 14px;
+    }
+
+    .box2{
+         position: relative;
+        left: -0.5px; 
+         border: 1px solid  #DBDBDB ;
+         width: 348px;
+         margin-top: 31px;
+         height: 62px;
+    }
+
+    .signup{
+        font-family: 'apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
+        color:rgb(0, 0, 0);
+        text-decoration: none;
+        font-weight:400;
+        font-size: 14px;
+
+    }
+    .signup a{
+        text-decoration: none;
+          color:#3a9ee1;
+        font-weight: 500;
+    }
+
+    .box2-contain{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 61px;
+
+    }
+
+    .box3{
+        /* position: relative; */
+        left: -0.5px; 
+        width: 348px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 13px;
+        
+    }
+    .box3 p {
+       
+        font-family: 'apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
+        color:rgb(0, 0, 0);
+        text-decoration: none;
+        font-weight:400;
+        font-size: 14px;
+    }
+
+    .box4{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 12px;
+        margin-left: 2px;
+        
+    }
+    .googleplay{
+       margin-right: 2.3px;
+        height: 45px;
+        width: 138px;
+        
+    }
+    .microsoft{
+        height: 42px;
+        width: 116px;
     }
