--- a/login.css
+++ b/login.css
@@ -182,11 +182,11 @@ body{
     }
     .fb{
         text-decoration: none;
-         color:#3a9ee1;
-        font-weight: 500;
+         color:rgb(0, 149, 246);
+        font-weight: 600;
         /* font-weight: bold; */
         margin-top: 40px;
-        word-spacing:-0.2px;
+        word-spacing:-0.1px;
         font-size: 14px;   
         font-family: 'apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
  }
@@ -230,7 +230,7 @@ body{
     }
     .signup a{
         text-decoration: none;
-          color:#3a9ee1;
+          color:rgb(0, 149, 246);
         font-weight: 500;
     }
 
