--- a/signup.css
+++ b/signup.css
@@ -319,7 +319,7 @@ body{
     padding: 20px 0px;
     margin-top: 53px;
     margin-left: -276px;
-    height: 93px;
+    height: 92.5px;
     /* position: absolute; */
 
    }
@@ -341,6 +341,7 @@ body{
     display: inline;
     font-size: 12px;
     word-spacing: 0px;
+    
    
 }
 .footer-links a {
@@ -350,13 +351,14 @@ body{
     font-size: 12px;
 }
 .footer-bottom{
+    position: relative;
  font-family: 'apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
     text-decoration: none;
     color:#6a6c71;
     font-size: 12px;
     
     gap: 16px;
-    margin-top: 19px;
+    margin-top: 18px;
     margin-left: -5px;
 }
 
@@ -365,7 +367,8 @@ body{
     
 }
 select  {
-    margin-left: 0px;
+    margin-left: 10px;
+    margin-top: 1.5px;
     border: none;
     outline: none;
     color:#6a6c71;
@@ -374,10 +377,20 @@ select  {
     color:#6a6c71;
     font-size: 12px;
     padding-right: 0px;
-}
-select::after{
-    content: "⌄";
-    font-weight: normal;
-}
 
+appearance: none;
+}
+.footer-bottom img{
+    position: relative;
+    top: 1.5px;
+    height: 11.5px;
+    width: 16.5px;
+    left: 1px;
+    cursor: pointer;
+}
+.footer-bottom #footer-span2{
+    position: relative;
+    left: -5px;
+    top: -0.5px;
+}
            
